<?xml version="1.0"?>
<package format="3">
	<name>nav_follow</name>
	<version>0.0.0</version>
	<description>The nav_follow package</description>

	<!-- One maintainer tag required, multiple allowed, one person per tag -->
	<!-- Example: -->
	<!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
	<maintainer email="stefano.mutti@stiima.cnr.it">stefano.mutti</maintainer>


	<!-- One license tag required, multiple allowed, one license per tag -->
	<!-- Commonly used license strings: -->
	<!-- BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
	<license>TODO</license>

  


	<buildtool_depend>ament_cmake</buildtool_depend>
	<build_depend>rclcpp</build_depend>
	<build_depend>libpcl-all-dev</build_depend>
	<build_depend>eigen</build_depend>
	<build_depend>std_msgs</build_depend>
  	<build_depend>geometry_msgs</build_depend>
	<build_depend>sensor_msgs</build_depend>

	<build_depend>tf2_ros</build_depend>
	<build_depend>tf2_eigen</build_depend>
	<build_depend>tf2_geometry_msgs</build_depend>
	<build_depend>control_toolbox</build_depend>
	<build_depend>pcl_conversions</build_depend>
	<build_depend>std_srvs</build_depend>

	<depend>generate_parameter_library</depend>
	<depend>rclcpp_lifecycle</depend>


	<exec_depend>rclcpp</exec_depend>
	<exec_depend>std_msgs</exec_depend>
	<exec_depend>geometry_msgs</exec_depend>
	<exec_depend>sensor_msgs</exec_depend>

	<!-- The export tag contains other, unspecified, tags -->
	<export>
		<!-- Other tools can request additional information be placed here -->
		<build_type>ament_cmake</build_type>
	</export>
</package>
